--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,19 @@
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: /blog/api/v1
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/blog
+    username: postgres
+    password: root
+    driver-class-name: org.postgresql.Driver
+  flyway:
+    password: root
+    url: jdbc:postgresql://localhost:5432/blog?charset=UTF-8
+    user: postgres
+  jpa:
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
+
