--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     implementation "org.postgresql:postgresql:$postgresqlVersion"
     implementation "org.flywaydb:flyway-core:$flywayCoreVersion"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$jpaVersion"
 
 }
 
