--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
-    implementation "org.postgresql:postgresql"
-    implementation "org.flywaydb:flyway-core"
+    implementation "org.postgresql:postgresql:$postgresqlVersion"
+    implementation "org.flywaydb:flyway-core:$flywayCoreVersion"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 
 }
