BLG-3-merge registration - added spring security starter - config WebSecurity

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,6 @@ repositories {
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
@@ -28,8 +27,9 @@ dependencies {
     implementation "org.flywaydb:flyway-core:$flywayCoreVersion"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation "org.springframework.boot:spring-boot-starter-web"
-// https://mvnrepository.com/artifact/org.hibernate/hibernate-validator
-    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.5.Final'
+    implementation "org.hibernate:hibernate-validator:$hibernateValidator"
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+    implementation "org.springframework.boot:spring-boot-starter-security"
 
 }
 
