--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,6 @@ repositories {
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
-    compileOnly "org.projectlombok:lombok:$lombokVersion"
-    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     implementation "org.postgresql:postgresql:$postgresqlVersion"
     implementation "org.flywaydb:flyway-core:$flywayCoreVersion"
@@ -29,7 +27,11 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.hibernate:hibernate-validator:$hibernateValidator"
     implementation "org.springframework.boot:spring-boot-starter-security"
-
+    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.4.2.Final'
 }
 
 test {
