--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,10 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.hibernate:hibernate-validator:$hibernateValidator"
     implementation "org.springframework.boot:spring-boot-starter-security"
-    // https://mvnrepository.com/artifact/org.mapstruct/mapstruct
     compileOnly "org.projectlombok:lombok:$lombokVersion"
-    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.2.Final'
+    implementation "org.mapstruct:mapstruct:$mapstruct"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.4.2.Final'
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructProcessor"
 }
 
 test {
