--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ lombokVersion=1.18.20
 postgresqlVersion=42.2.10
 flywayCoreVersion=5.2.4
 hibernateValidator=6.1.5.Final
+mapstruct=1.4.2.Final
+mapstructProcessor=1.4.2.Final
